# gcl

./: .gitattributes  .gitignore  README.md  gcl.cabal  hie.yaml  installation-notes.md  log.txt  package.yaml  stack.yaml
.github/workflows/: main.yml  release.yaml  test-linux.yaml  test-mac.yaml  test-windows.yaml  test.yaml  test.yml
app/: Main.hs  Main2.hs
examples/: a.gcl  b.gcl  datatype.gcl  descend_jump.gcl  divmod.gcl  factor.gcl  fastmul.gcl  fastmul_with_holes.gcl  gcd.gcl  maxdiff.gcl  mss.gcl  mss.gcl.tc.golden  posnegpairs.gcl  sample.gcl  simpleExpo.gcl  simple_exp.gcl  spec.gcl  squareroot.gcl  sumup.gcl  test.gcl  wp.txt
examples/new syntax/: gcd.gcl  maxdiff
src/: Error.hs  Expr.hs  GCL.hs  LSP.hs  Main.hs  Pred.hs  Pretty.hs  REPL.hs  Render.hs  Server.hs  Simple.hs  Syntax.hs  Type.hs
src/GCL/: Common.hs  EnumHole.hs  Exec.hs  Expand.hs  Expr.hs  Expr2.hs  HMConGenType.hs  Kind.hs  PreCond.hs  PreCond2.hs  Pred.hs  Predicate.hs  Scope.hs  Stmt.hs  SubstRule.md  SubstRuleNew.md  Substitute.hs  Substitution.hs  Type.hs  Type2.hs  WP.hs  WP2.hs
src/LSP/: CustomMethod.hs  Diagnostic.hs  ExportPO.hs  Handler.hs  Monad.hs
src/Pretty/: Abstract.hs  Common.hs  Concrete.hs  Concrete2.hs  Error.hs  Predicate.hs  Typed.hs  Util.hs  Variadic.hs
src/Render/: Class.hs  Element.hs  Error.hs  Predicate.hs  WP.hs
src/SCM/: Test.hs  simpleExpo.gcl  tst.gcl
src/SMT/: Helpers.hs  Prove.hs
src/Server/: AnnotateToken.hs  CustomMethod.hs  DSL.hs  Diagnostic.hs  DiffMap.hs  Eff.hs  ExportPO.hs  GoToDefn.hs  Handler.hs  Handler2.hs  (+13 more)
test/: Test.hs
(+277 files in other folders)
