name:               gcl
version:            0.1.0.0
synopsis:           Guarded Command Language
homepage:           https://github.com/scmlab/gcl
license:            unlicensed
license-file:       LICENSE
author:             Author name here
maintainer:         example@example.com
copyright:          2017 Author name here
category:           Language
build-type:         Simple
extra-source-files: README.md
cabal-version:      >=1.10

-- To avoid duplicated efforts in documentation and dealing with the
-- complications of embedding Haddock markup inside cabal files, it is
-- common to point users to the README.md file.
description:        Please see the README on Github at <https://github.com/scmlab/gcl#readme>

executable gcl
    hs-source-dirs:     src
    main-is:            GCL.hs
    ghc-options:        -threaded -rtsopts -with-rtsopts=-N
    build-depends:      base
                    ,   mtl
                    ,   gcl
    default-language:   Haskell2010


source-repository head
    type:       git
    location:   https://github.com/scmlab/gcl
